# Convolution

./: CMakeLists.txt  convolve.cpp  convolve_kernel.cu  convolve_kernel.h  exceptions.h  my_log.h
data/: filter.raw  image.raw
